[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://resources/tileset3.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/time_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/BallL.tscn" type="PackedScene" id=5]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="ground" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 65536, 1, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 2, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 2, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 2, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 2, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 65568, 3, 0, 65569, 3, 0, 65570, 3, 0, 65571, 2, 0, 65572, 3, 0, 65573, 3, 0, 65574, 3, 0, 65575, 3, 0, 65576, 3, 0, 65577, 3, 0, 65578, 3, 0, 65579, 3, 0, 65580, 3, 0, 65581, 3, 0, 65582, 3, 0, 65583, 3, 0, 65584, 3, 0, 65585, 2, 0, 65586, 3, 0, 65587, 3, 0, 65588, 3, 0, 65589, 3, 0, 65590, 3, 0, 65591, 3, 0, 65592, 3, 0, 65593, 3, 0, 65594, 3, 0, 65595, 1, 0, 131072, 1, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 2, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 2, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 2, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 2, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 131104, 3, 0, 131105, 3, 0, 131106, 3, 0, 131107, 2, 0, 131108, 3, 0, 131109, 3, 0, 131110, 3, 0, 131111, 3, 0, 131112, 3, 0, 131113, 3, 0, 131114, 3, 0, 131115, 3, 0, 131116, 3, 0, 131117, 3, 0, 131118, 3, 0, 131119, 3, 0, 131120, 3, 0, 131121, 2, 0, 131122, 3, 0, 131123, 3, 0, 131124, 3, 0, 131125, 3, 0, 131126, 3, 0, 131127, 3, 0, 131128, 3, 0, 131129, 3, 0, 131130, 3, 0, 131131, 1, 0, 196608, 1, 0, 196609, 3, 0, 196610, 3, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 3, 0, 196620, 3, 0, 196621, 2, 0, 196622, 3, 0, 196623, 3, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 2, 0, 196629, 3, 0, 196630, 3, 0, 196631, 2, 0, 196632, 3, 0, 196633, 3, 0, 196634, 2, 0, 196635, 2, 0, 196636, 2, 0, 196637, 2, 0, 196638, 2, 0, 196639, 2, 0, 196640, 2, 0, 196641, 3, 0, 196642, 3, 0, 196643, 2, 0, 196644, 2, 0, 196645, 2, 0, 196646, 2, 0, 196647, 3, 0, 196648, 3, 0, 196649, 2, 0, 196650, 2, 0, 196651, 2, 0, 196652, 2, 0, 196653, 2, 0, 196654, 2, 0, 196655, 3, 0, 196656, 3, 0, 196657, 2, 0, 196658, 3, 0, 196659, 3, 0, 196660, 2, 0, 196661, 2, 0, 196662, 2, 0, 196663, 2, 0, 196664, 2, 0, 196665, 2, 0, 196666, 2, 0, 196667, 1, 0, 262144, 1, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 2, 0, 262155, 3, 0, 262156, 3, 0, 262157, 2, 0, 262158, 3, 0, 262159, 3, 0, 262160, 2, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 2, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 262176, 3, 0, 262177, 3, 0, 262178, 3, 0, 262179, 3, 0, 262180, 3, 0, 262181, 3, 0, 262182, 2, 0, 262183, 3, 0, 262184, 3, 0, 262185, 3, 0, 262186, 3, 0, 262187, 3, 0, 262188, 3, 0, 262189, 3, 0, 262190, 2, 0, 262191, 3, 0, 262192, 3, 0, 262193, 2, 0, 262194, 3, 0, 262195, 3, 0, 262196, 2, 0, 262197, 3, 0, 262198, 3, 0, 262199, 3, 0, 262200, 3, 0, 262201, 3, 0, 262202, 3, 0, 262203, 1, 0, 327680, 1, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 2, 0, 327691, 3, 0, 327692, 3, 0, 327693, 2, 0, 327694, 3, 0, 327695, 3, 0, 327696, 2, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 2, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 327710, 3, 0, 327711, 3, 0, 327712, 3, 0, 327713, 3, 0, 327714, 3, 0, 327715, 3, 0, 327716, 3, 0, 327717, 3, 0, 327718, 2, 0, 327719, 3, 0, 327720, 3, 0, 327721, 3, 0, 327722, 3, 0, 327723, 3, 0, 327724, 3, 0, 327725, 3, 0, 327726, 2, 0, 327727, 3, 0, 327728, 3, 0, 327729, 2, 0, 327730, 3, 0, 327731, 3, 0, 327732, 2, 0, 327733, 3, 0, 327734, 3, 0, 327735, 3, 0, 327736, 3, 0, 327737, 3, 0, 327738, 3, 0, 327739, 1, 0, 393216, 1, 0, 393217, 3, 0, 393218, 3, 0, 393219, 2, 0, 393220, 3, 0, 393221, 3, 0, 393222, 2, 0, 393223, 2, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 2, 0, 393230, 3, 0, 393231, 3, 0, 393232, 2, 0, 393233, 3, 0, 393234, 3, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 3, 0, 393241, 3, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 3, 0, 393247, 3, 0, 393248, 2, 0, 393249, 3, 0, 393250, 3, 0, 393251, 2, 0, 393252, 3, 0, 393253, 3, 0, 393254, 2, 0, 393255, 3, 0, 393256, 3, 0, 393257, 2, 0, 393258, 2, 0, 393259, 2, 0, 393260, 2, 0, 393261, 2, 0, 393262, 2, 0, 393263, 2, 0, 393264, 2, 0, 393265, 2, 0, 393266, 3, 0, 393267, 3, 0, 393268, 2, 0, 393269, 2, 0, 393270, 2, 0, 393271, 2, 0, 393272, 2, 0, 393273, 3, 0, 393274, 3, 0, 393275, 1, 0, 458752, 1, 0, 458753, 3, 0, 458754, 3, 0, 458755, 2, 0, 458756, 3, 0, 458757, 3, 0, 458758, 2, 0, 458759, 2, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 2, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 2, 0, 458776, 3, 0, 458777, 3, 0, 458778, 2, 0, 458779, 3, 0, 458780, 3, 0, 458781, 2, 0, 458782, 3, 0, 458783, 3, 0, 458784, 2, 0, 458785, 3, 0, 458786, 3, 0, 458787, 2, 0, 458788, 3, 0, 458789, 3, 0, 458790, 2, 0, 458791, 3, 0, 458792, 3, 0, 458793, 3, 0, 458794, 3, 0, 458795, 3, 0, 458796, 3, 0, 458797, 3, 0, 458798, 3, 0, 458799, 3, 0, 458800, 3, 0, 458801, 3, 0, 458802, 3, 0, 458803, 3, 0, 458804, 3, 0, 458805, 3, 0, 458806, 3, 0, 458807, 3, 0, 458808, 3, 0, 458809, 3, 0, 458810, 3, 0, 458811, 1, 0, 524288, 1, 0, 524289, 3, 0, 524290, 3, 0, 524291, 2, 0, 524292, 3, 0, 524293, 3, 0, 524294, 2, 0, 524295, 2, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 2, 0, 524312, 3, 0, 524313, 3, 0, 524314, 2, 0, 524315, 3, 0, 524316, 3, 0, 524317, 2, 0, 524318, 3, 0, 524319, 3, 0, 524320, 2, 0, 524321, 3, 0, 524322, 3, 0, 524323, 2, 0, 524324, 3, 0, 524325, 3, 0, 524326, 2, 0, 524327, 3, 0, 524328, 3, 0, 524329, 3, 0, 524330, 3, 0, 524331, 3, 0, 524332, 3, 0, 524333, 3, 0, 524334, 3, 0, 524335, 3, 0, 524336, 3, 0, 524337, 3, 0, 524338, 3, 0, 524339, 3, 0, 524340, 3, 0, 524341, 3, 0, 524342, 3, 0, 524343, 3, 0, 524344, 3, 0, 524345, 3, 0, 524346, 3, 0, 524347, 1, 0, 589824, 1, 0, 589825, 3, 0, 589826, 3, 0, 589827, 2, 0, 589828, 3, 0, 589829, 3, 0, 589830, 2, 0, 589831, 2, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 3, 0, 589846, 3, 0, 589847, 2, 0, 589848, 3, 0, 589849, 3, 0, 589850, 2, 0, 589851, 3, 0, 589852, 3, 0, 589853, 2, 0, 589854, 3, 0, 589855, 3, 0, 589856, 2, 0, 589857, 3, 0, 589858, 3, 0, 589859, 2, 0, 589860, 3, 0, 589861, 3, 0, 589862, 3, 0, 589863, 2, 0, 589864, 2, 0, 589865, 2, 0, 589866, 2, 0, 589867, 2, 0, 589868, 2, 0, 589869, 2, 0, 589870, 3, 0, 589871, 3, 0, 589872, 2, 0, 589873, 2, 0, 589874, 2, 0, 589875, 2, 0, 589876, 2, 0, 589877, 2, 0, 589878, 3, 0, 589879, 3, 0, 589880, 2, 0, 589881, 3, 0, 589882, 3, 0, 589883, 1, 0, 655360, 1, 0, 655361, 3, 0, 655362, 3, 0, 655363, 2, 0, 655364, 3, 0, 655365, 3, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 2, 0, 655384, 3, 0, 655385, 3, 0, 655386, 2, 0, 655387, 3, 0, 655388, 3, 0, 655389, 2, 0, 655390, 2, 0, 655391, 2, 0, 655392, 2, 0, 655393, 3, 0, 655394, 3, 0, 655395, 2, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 2, 0, 655400, 3, 0, 655401, 3, 0, 655402, 3, 0, 655403, 3, 0, 655404, 3, 0, 655405, 2, 0, 655406, 3, 0, 655407, 3, 0, 655408, 3, 0, 655409, 3, 0, 655410, 3, 0, 655411, 3, 0, 655412, 3, 0, 655413, 2, 0, 655414, 3, 0, 655415, 3, 0, 655416, 2, 0, 655417, 3, 0, 655418, 3, 0, 655419, 1, 0, 720896, 1, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 3, 0, 720901, 3, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 2, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 720928, 3, 0, 720929, 3, 0, 720930, 3, 0, 720931, 3, 0, 720932, 2, 0, 720933, 3, 0, 720934, 3, 0, 720935, 2, 0, 720936, 3, 0, 720937, 3, 0, 720938, 3, 0, 720939, 3, 0, 720940, 3, 0, 720941, 2, 0, 720942, 3, 0, 720943, 3, 0, 720944, 3, 0, 720945, 3, 0, 720946, 3, 0, 720947, 3, 0, 720948, 3, 0, 720949, 2, 0, 720950, 3, 0, 720951, 3, 0, 720952, 2, 0, 720953, 3, 0, 720954, 3, 0, 720955, 1, 0, 786432, 1, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 2, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 786464, 3, 0, 786465, 3, 0, 786466, 3, 0, 786467, 3, 0, 786468, 2, 0, 786469, 3, 0, 786470, 3, 0, 786471, 2, 0, 786472, 3, 0, 786473, 3, 0, 786474, 2, 0, 786475, 3, 0, 786476, 3, 0, 786477, 2, 0, 786478, 3, 0, 786479, 3, 0, 786480, 2, 0, 786481, 2, 0, 786482, 2, 0, 786483, 2, 0, 786484, 2, 0, 786485, 2, 0, 786486, 2, 0, 786487, 2, 0, 786488, 2, 0, 786489, 3, 0, 786490, 3, 0, 786491, 1, 0, 851968, 1, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 2, 0, 851984, 2, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 2, 0, 851991, 2, 0, 851992, 3, 0, 851993, 3, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 8, 0, 851998, 8, 0, 851999, 8, 0, 852000, 8, 0, 852001, 8, 0, 852002, 3, 0, 852003, 3, 0, 852004, 2, 0, 852005, 3, 0, 852006, 3, 0, 852007, 2, 0, 852008, 3, 0, 852009, 3, 0, 852010, 2, 0, 852011, 3, 0, 852012, 3, 0, 852013, 2, 0, 852014, 3, 0, 852015, 3, 0, 852016, 3, 0, 852017, 3, 0, 852018, 3, 0, 852019, 3, 0, 852020, 3, 0, 852021, 2, 0, 852022, 3, 0, 852023, 3, 0, 852024, 3, 0, 852025, 3, 0, 852026, 3, 0, 852027, 1, 0, 917504, 1, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 2, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 2, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 8, 0, 917534, 7, 0, 917535, 7, 0, 917536, 7, 0, 917537, 8, 0, 917538, 3, 0, 917539, 3, 0, 917540, 2, 0, 917541, 2, 0, 917542, 2, 0, 917543, 2, 0, 917544, 2, 0, 917545, 2, 0, 917546, 2, 0, 917547, 3, 0, 917548, 3, 0, 917549, 2, 0, 917550, 3, 0, 917551, 3, 0, 917552, 3, 0, 917553, 3, 0, 917554, 3, 0, 917555, 3, 0, 917556, 3, 0, 917557, 2, 0, 917558, 3, 0, 917559, 3, 0, 917560, 3, 0, 917561, 3, 0, 917562, 3, 0, 917563, 1, 0, 983040, 1, 0, 983041, 5, 0, 983042, 5, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 2, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 2, 0, 983054, 3, 0, 983055, 3, 0, 983056, 2, 0, 983057, 3, 0, 983058, 3, 0, 983059, 2, 0, 983060, 2, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 3, 0, 983070, 3, 0, 983071, 3, 0, 983072, 3, 0, 983073, 3, 0, 983074, 3, 0, 983075, 3, 0, 983076, 3, 0, 983077, 3, 0, 983078, 3, 0, 983079, 3, 0, 983080, 3, 0, 983081, 3, 0, 983082, 2, 0, 983083, 3, 0, 983084, 3, 0, 983085, 2, 0, 983086, 2, 0, 983087, 2, 0, 983088, 2, 0, 983089, 2, 0, 983090, 2, 0, 983091, 2, 0, 983092, 2, 0, 983093, 2, 0, 983094, 3, 0, 983095, 3, 0, 983096, 2, 0, 983097, 2, 0, 983098, 2, 0, 983099, 1, 0, 1048576, 1, 0, 1048577, 5, 0, 1048578, 5, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 2, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 3, 0, 1048604, 3, 0, 1048605, 8, 0, 1048606, 7, 0, 1048607, 7, 0, 1048608, 7, 0, 1048609, 8, 0, 1048610, 3, 0, 1048611, 3, 0, 1048612, 3, 0, 1048613, 3, 0, 1048614, 3, 0, 1048615, 3, 0, 1048616, 3, 0, 1048617, 3, 0, 1048618, 2, 0, 1048619, 3, 0, 1048620, 3, 0, 1048621, 3, 0, 1048622, 3, 0, 1048623, 2, 0, 1048624, 3, 0, 1048625, 3, 0, 1048626, 3, 0, 1048627, 3, 0, 1048628, 3, 0, 1048629, 2, 0, 1048630, 3, 0, 1048631, 3, 0, 1048632, 3, 0, 1048633, 5, 0, 1048634, 5, 0, 1048635, 1, 0, 1114112, 1, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 3, 0, 1114117, 3, 0, 1114118, 2, 0, 1114119, 2, 0, 1114120, 2, 0, 1114121, 2, 0, 1114122, 2, 0, 1114123, 2, 0, 1114124, 3, 0, 1114125, 3, 0, 1114126, 3, 0, 1114127, 3, 0, 1114128, 3, 0, 1114129, 3, 0, 1114130, 3, 0, 1114131, 3, 0, 1114132, 3, 0, 1114133, 2, 0, 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1114137, 2, 0, 1114138, 2, 0, 1114139, 2, 0, 1114140, 2, 0, 1114141, 8, 0, 1114142, 8, 0, 1114143, 8, 0, 1114144, 8, 0, 1114145, 8, 0, 1114146, 3, 0, 1114147, 3, 0, 1114148, 2, 0, 1114149, 3, 0, 1114150, 3, 0, 1114151, 2, 0, 1114152, 3, 0, 1114153, 3, 0, 1114154, 2, 0, 1114155, 3, 0, 1114156, 3, 0, 1114157, 3, 0, 1114158, 3, 0, 1114159, 2, 0, 1114160, 3, 0, 1114161, 3, 0, 1114162, 3, 0, 1114163, 3, 0, 1114164, 3, 0, 1114165, 2, 0, 1114166, 3, 0, 1114167, 3, 0, 1114168, 3, 0, 1114169, 5, 0, 1114170, 5, 0, 1114171, 1, 0, 1179648, 1, 0, 1179649, 3, 0, 1179650, 3, 0, 1179651, 2, 0, 1179652, 3, 0, 1179653, 3, 0, 1179654, 2, 0, 1179655, 3, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 3, 0, 1179666, 3, 0, 1179667, 3, 0, 1179668, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 3, 0, 1179672, 3, 0, 1179673, 2, 0, 1179674, 3, 0, 1179675, 3, 0, 1179676, 3, 0, 1179677, 3, 0, 1179678, 3, 0, 1179679, 3, 0, 1179680, 3, 0, 1179681, 3, 0, 1179682, 3, 0, 1179683, 3, 0, 1179684, 2, 0, 1179685, 3, 0, 1179686, 3, 0, 1179687, 2, 0, 1179688, 3, 0, 1179689, 3, 0, 1179690, 2, 0, 1179691, 3, 0, 1179692, 3, 0, 1179693, 3, 0, 1179694, 3, 0, 1179695, 2, 0, 1179696, 3, 0, 1179697, 3, 0, 1179698, 2, 0, 1179699, 2, 0, 1179700, 2, 0, 1179701, 2, 0, 1179702, 2, 0, 1179703, 2, 0, 1179704, 2, 0, 1179705, 2, 0, 1179706, 2, 0, 1179707, 1, 0, 1245184, 1, 0, 1245185, 3, 0, 1245186, 3, 0, 1245187, 2, 0, 1245188, 3, 0, 1245189, 3, 0, 1245190, 2, 0, 1245191, 3, 0, 1245192, 3, 0, 1245193, 3, 0, 1245194, 3, 0, 1245195, 3, 0, 1245196, 3, 0, 1245197, 3, 0, 1245198, 2, 0, 1245199, 2, 0, 1245200, 2, 0, 1245201, 3, 0, 1245202, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 3, 0, 1245207, 3, 0, 1245208, 3, 0, 1245209, 2, 0, 1245210, 3, 0, 1245211, 3, 0, 1245212, 3, 0, 1245213, 3, 0, 1245214, 3, 0, 1245215, 3, 0, 1245216, 3, 0, 1245217, 3, 0, 1245218, 3, 0, 1245219, 3, 0, 1245220, 2, 0, 1245221, 3, 0, 1245222, 3, 0, 1245223, 2, 0, 1245224, 2, 0, 1245225, 2, 0, 1245226, 2, 0, 1245227, 3, 0, 1245228, 3, 0, 1245229, 3, 0, 1245230, 3, 0, 1245231, 2, 0, 1245232, 3, 0, 1245233, 3, 0, 1245234, 2, 0, 1245235, 3, 0, 1245236, 3, 0, 1245237, 3, 0, 1245238, 3, 0, 1245239, 3, 0, 1245240, 3, 0, 1245241, 3, 0, 1245242, 3, 0, 1245243, 1, 0, 1310720, 1, 0, 1310721, 3, 0, 1310722, 3, 0, 1310723, 2, 0, 1310724, 3, 0, 1310725, 3, 0, 1310726, 2, 0, 1310727, 3, 0, 1310728, 3, 0, 1310729, 2, 0, 1310730, 3, 0, 1310731, 3, 0, 1310732, 3, 0, 1310733, 3, 0, 1310734, 3, 0, 1310735, 3, 0, 1310736, 2, 0, 1310737, 3, 0, 1310738, 3, 0, 1310739, 2, 0, 1310740, 2, 0, 1310741, 2, 0, 1310742, 2, 0, 1310743, 3, 0, 1310744, 3, 0, 1310745, 2, 0, 1310746, 2, 0, 1310747, 2, 0, 1310748, 2, 0, 1310749, 2, 0, 1310750, 2, 0, 1310751, 2, 0, 1310752, 2, 0, 1310753, 2, 0, 1310754, 2, 0, 1310755, 2, 0, 1310756, 2, 0, 1310757, 3, 0, 1310758, 3, 0, 1310759, 2, 0, 1310760, 3, 0, 1310761, 3, 0, 1310762, 3, 0, 1310763, 3, 0, 1310764, 3, 0, 1310765, 3, 0, 1310766, 3, 0, 1310767, 2, 0, 1310768, 3, 0, 1310769, 3, 0, 1310770, 2, 0, 1310771, 3, 0, 1310772, 3, 0, 1310773, 3, 0, 1310774, 3, 0, 1310775, 3, 0, 1310776, 3, 0, 1310777, 3, 0, 1310778, 3, 0, 1310779, 1, 0, 1376256, 1, 0, 1376257, 3, 0, 1376258, 3, 0, 1376259, 2, 0, 1376260, 3, 0, 1376261, 3, 0, 1376262, 3, 0, 1376263, 3, 0, 1376264, 3, 0, 1376265, 2, 0, 1376266, 3, 0, 1376267, 3, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 3, 0, 1376271, 3, 0, 1376272, 2, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 2, 0, 1376276, 3, 0, 1376277, 3, 0, 1376278, 3, 0, 1376279, 3, 0, 1376280, 3, 0, 1376281, 3, 0, 1376282, 3, 0, 1376283, 3, 0, 1376284, 3, 0, 1376285, 3, 0, 1376286, 3, 0, 1376287, 3, 0, 1376288, 3, 0, 1376289, 3, 0, 1376290, 2, 0, 1376291, 3, 0, 1376292, 3, 0, 1376293, 3, 0, 1376294, 3, 0, 1376295, 2, 0, 1376296, 3, 0, 1376297, 3, 0, 1376298, 3, 0, 1376299, 3, 0, 1376300, 3, 0, 1376301, 3, 0, 1376302, 3, 0, 1376303, 2, 0, 1376304, 3, 0, 1376305, 3, 0, 1376306, 2, 0, 1376307, 3, 0, 1376308, 3, 0, 1376309, 2, 0, 1376310, 2, 0, 1376311, 2, 0, 1376312, 2, 0, 1376313, 2, 0, 1376314, 2, 0, 1376315, 1, 0, 1441792, 1, 0, 1441793, 3, 0, 1441794, 3, 0, 1441795, 2, 0, 1441796, 3, 0, 1441797, 3, 0, 1441798, 3, 0, 1441799, 3, 0, 1441800, 3, 0, 1441801, 2, 0, 1441802, 3, 0, 1441803, 3, 0, 1441804, 3, 0, 1441805, 2, 0, 1441806, 2, 0, 1441807, 2, 0, 1441808, 2, 0, 1441809, 3, 0, 1441810, 3, 0, 1441811, 2, 0, 1441812, 3, 0, 1441813, 3, 0, 1441814, 3, 0, 1441815, 3, 0, 1441816, 3, 0, 1441817, 3, 0, 1441818, 3, 0, 1441819, 3, 0, 1441820, 3, 0, 1441821, 3, 0, 1441822, 3, 0, 1441823, 3, 0, 1441824, 3, 0, 1441825, 3, 0, 1441826, 2, 0, 1441827, 3, 0, 1441828, 3, 0, 1441829, 3, 0, 1441830, 3, 0, 1441831, 2, 0, 1441832, 3, 0, 1441833, 3, 0, 1441834, 2, 0, 1441835, 2, 0, 1441836, 2, 0, 1441837, 3, 0, 1441838, 3, 0, 1441839, 2, 0, 1441840, 3, 0, 1441841, 3, 0, 1441842, 2, 0, 1441843, 3, 0, 1441844, 3, 0, 1441845, 2, 0, 1441846, 3, 0, 1441847, 3, 0, 1441848, 3, 0, 1441849, 3, 0, 1441850, 3, 0, 1441851, 1, 0, 1507328, 1, 0, 1507329, 3, 0, 1507330, 3, 0, 1507331, 2, 0, 1507332, 2, 0, 1507333, 2, 0, 1507334, 2, 0, 1507335, 2, 0, 1507336, 2, 0, 1507337, 2, 0, 1507338, 3, 0, 1507339, 3, 0, 1507340, 2, 0, 1507341, 2, 0, 1507342, 2, 0, 1507343, 2, 0, 1507344, 3, 0, 1507345, 3, 0, 1507346, 3, 0, 1507347, 2, 0, 1507348, 2, 0, 1507349, 2, 0, 1507350, 2, 0, 1507351, 2, 0, 1507352, 2, 0, 1507353, 2, 0, 1507354, 2, 0, 1507355, 2, 0, 1507356, 2, 0, 1507357, 2, 0, 1507358, 2, 0, 1507359, 2, 0, 1507360, 2, 0, 1507361, 2, 0, 1507362, 2, 0, 1507363, 3, 0, 1507364, 3, 0, 1507365, 2, 0, 1507366, 2, 0, 1507367, 2, 0, 1507368, 3, 0, 1507369, 3, 0, 1507370, 2, 0, 1507371, 2, 0, 1507372, 2, 0, 1507373, 3, 0, 1507374, 3, 0, 1507375, 2, 0, 1507376, 3, 0, 1507377, 3, 0, 1507378, 2, 0, 1507379, 3, 0, 1507380, 3, 0, 1507381, 2, 0, 1507382, 3, 0, 1507383, 3, 0, 1507384, 3, 0, 1507385, 3, 0, 1507386, 3, 0, 1507387, 1, 0, 1572864, 1, 0, 1572865, 3, 0, 1572866, 3, 0, 1572867, 3, 0, 1572868, 3, 0, 1572869, 3, 0, 1572870, 2, 0, 1572871, 3, 0, 1572872, 3, 0, 1572873, 3, 0, 1572874, 3, 0, 1572875, 3, 0, 1572876, 3, 0, 1572877, 3, 0, 1572878, 3, 0, 1572879, 3, 0, 1572880, 3, 0, 1572881, 3, 0, 1572882, 2, 0, 1572883, 2, 0, 1572884, 3, 0, 1572885, 3, 0, 1572886, 3, 0, 1572887, 3, 0, 1572888, 3, 0, 1572889, 3, 0, 1572890, 3, 0, 1572891, 2, 0, 1572892, 3, 0, 1572893, 3, 0, 1572894, 3, 0, 1572895, 3, 0, 1572896, 3, 0, 1572897, 3, 0, 1572898, 3, 0, 1572899, 3, 0, 1572900, 3, 0, 1572901, 3, 0, 1572902, 3, 0, 1572903, 3, 0, 1572904, 3, 0, 1572905, 3, 0, 1572906, 2, 0, 1572907, 3, 0, 1572908, 3, 0, 1572909, 3, 0, 1572910, 3, 0, 1572911, 3, 0, 1572912, 3, 0, 1572913, 3, 0, 1572914, 3, 0, 1572915, 3, 0, 1572916, 3, 0, 1572917, 3, 0, 1572918, 3, 0, 1572919, 3, 0, 1572920, 2, 0, 1572921, 2, 0, 1572922, 2, 0, 1572923, 1, 0, 1638400, 1, 0, 1638401, 3, 0, 1638402, 3, 0, 1638403, 3, 0, 1638404, 3, 0, 1638405, 3, 0, 1638406, 2, 0, 1638407, 3, 0, 1638408, 3, 0, 1638409, 3, 0, 1638410, 3, 0, 1638411, 3, 0, 1638412, 3, 0, 1638413, 3, 0, 1638414, 3, 0, 1638415, 3, 0, 1638416, 3, 0, 1638417, 2, 0, 1638418, 2, 0, 1638419, 3, 0, 1638420, 3, 0, 1638421, 3, 0, 1638422, 3, 0, 1638423, 3, 0, 1638424, 3, 0, 1638425, 3, 0, 1638426, 3, 0, 1638427, 2, 0, 1638428, 3, 0, 1638429, 3, 0, 1638430, 3, 0, 1638431, 3, 0, 1638432, 3, 0, 1638433, 3, 0, 1638434, 3, 0, 1638435, 3, 0, 1638436, 3, 0, 1638437, 3, 0, 1638438, 3, 0, 1638439, 3, 0, 1638440, 3, 0, 1638441, 3, 0, 1638442, 2, 0, 1638443, 3, 0, 1638444, 3, 0, 1638445, 3, 0, 1638446, 3, 0, 1638447, 3, 0, 1638448, 3, 0, 1638449, 3, 0, 1638450, 3, 0, 1638451, 3, 0, 1638452, 3, 0, 1638453, 3, 0, 1638454, 3, 0, 1638455, 3, 0, 1638456, 2, 0, 1638457, 3, 0, 1638458, 3, 0, 1638459, 1, 0, 1703936, 1, 0, 1703937, 2, 0, 1703938, 2, 0, 1703939, 2, 0, 1703940, 3, 0, 1703941, 3, 0, 1703942, 2, 0, 1703943, 3, 0, 1703944, 3, 0, 1703945, 2, 0, 1703946, 2, 0, 1703947, 2, 0, 1703948, 2, 0, 1703949, 2, 0, 1703950, 3, 0, 1703951, 3, 0, 1703952, 2, 0, 1703953, 2, 0, 1703954, 2, 0, 1703955, 3, 0, 1703956, 3, 0, 1703957, 2, 0, 1703958, 2, 0, 1703959, 2, 0, 1703960, 3, 0, 1703961, 3, 0, 1703962, 2, 0, 1703963, 2, 0, 1703964, 3, 0, 1703965, 3, 0, 1703966, 2, 0, 1703967, 2, 0, 1703968, 2, 0, 1703969, 2, 0, 1703970, 2, 0, 1703971, 2, 0, 1703972, 2, 0, 1703973, 2, 0, 1703974, 2, 0, 1703975, 2, 0, 1703976, 3, 0, 1703977, 3, 0, 1703978, 2, 0, 1703979, 3, 0, 1703980, 3, 0, 1703981, 2, 0, 1703982, 2, 0, 1703983, 2, 0, 1703984, 2, 0, 1703985, 2, 0, 1703986, 2, 0, 1703987, 2, 0, 1703988, 2, 0, 1703989, 2, 0, 1703990, 2, 0, 1703991, 2, 0, 1703992, 2, 0, 1703993, 3, 0, 1703994, 3, 0, 1703995, 1, 0, 1769472, 1, 0, 1769473, 3, 0, 1769474, 3, 0, 1769475, 3, 0, 1769476, 3, 0, 1769477, 3, 0, 1769478, 3, 0, 1769479, 3, 0, 1769480, 3, 0, 1769481, 3, 0, 1769482, 3, 0, 1769483, 2, 0, 1769484, 3, 0, 1769485, 3, 0, 1769486, 3, 0, 1769487, 3, 0, 1769488, 3, 0, 1769489, 3, 0, 1769490, 3, 0, 1769491, 3, 0, 1769492, 3, 0, 1769493, 2, 0, 1769494, 3, 0, 1769495, 3, 0, 1769496, 3, 0, 1769497, 3, 0, 1769498, 3, 0, 1769499, 3, 0, 1769500, 3, 0, 1769501, 3, 0, 1769502, 2, 0, 1769503, 3, 0, 1769504, 3, 0, 1769505, 3, 0, 1769506, 3, 0, 1769507, 3, 0, 1769508, 3, 0, 1769509, 3, 0, 1769510, 3, 0, 1769511, 3, 0, 1769512, 3, 0, 1769513, 3, 0, 1769514, 2, 0, 1769515, 3, 0, 1769516, 3, 0, 1769517, 3, 0, 1769518, 3, 0, 1769519, 3, 0, 1769520, 3, 0, 1769521, 3, 0, 1769522, 3, 0, 1769523, 3, 0, 1769524, 3, 0, 1769525, 3, 0, 1769526, 3, 0, 1769527, 3, 0, 1769528, 3, 0, 1769529, 3, 0, 1769530, 3, 0, 1769531, 1, 0, 1835008, 1, 0, 1835009, 3, 0, 1835010, 3, 0, 1835011, 3, 0, 1835012, 3, 0, 1835013, 3, 0, 1835014, 3, 0, 1835015, 3, 0, 1835016, 3, 0, 1835017, 3, 0, 1835018, 3, 0, 1835019, 2, 0, 1835020, 3, 0, 1835021, 3, 0, 1835022, 3, 0, 1835023, 3, 0, 1835024, 3, 0, 1835025, 3, 0, 1835026, 3, 0, 1835027, 3, 0, 1835028, 3, 0, 1835029, 2, 0, 1835030, 3, 0, 1835031, 3, 0, 1835032, 3, 0, 1835033, 3, 0, 1835034, 3, 0, 1835035, 3, 0, 1835036, 3, 0, 1835037, 3, 0, 1835038, 2, 0, 1835039, 3, 0, 1835040, 3, 0, 1835041, 3, 0, 1835042, 3, 0, 1835043, 3, 0, 1835044, 3, 0, 1835045, 3, 0, 1835046, 3, 0, 1835047, 3, 0, 1835048, 3, 0, 1835049, 3, 0, 1835050, 2, 0, 1835051, 3, 0, 1835052, 3, 0, 1835053, 3, 0, 1835054, 3, 0, 1835055, 3, 0, 1835056, 3, 0, 1835057, 3, 0, 1835058, 3, 0, 1835059, 3, 0, 1835060, 3, 0, 1835061, 3, 0, 1835062, 3, 0, 1835063, 3, 0, 1835064, 3, 0, 1835065, 3, 0, 1835066, 3, 0, 1835067, 1, 0, 1900544, 1, 0, 1900545, 1, 0, 1900546, 1, 0, 1900547, 1, 0, 1900548, 1, 0, 1900549, 1, 0, 1900550, 1, 0, 1900551, 1, 0, 1900552, 1, 0, 1900553, 1, 0, 1900554, 1, 0, 1900555, 1, 0, 1900556, 1, 0, 1900557, 1, 0, 1900558, 1, 0, 1900559, 1, 0, 1900560, 1, 0, 1900561, 1, 0, 1900562, 1, 0, 1900563, 1, 0, 1900564, 1, 0, 1900565, 1, 0, 1900566, 1, 0, 1900567, 1, 0, 1900568, 1, 0, 1900569, 1, 0, 1900570, 1, 0, 1900571, 1, 0, 1900572, 1, 0, 1900573, 1, 0, 1900574, 1, 0, 1900575, 1, 0, 1900576, 1, 0, 1900577, 1, 0, 1900578, 1, 0, 1900579, 1, 0, 1900580, 1, 0, 1900581, 1, 0, 1900582, 1, 0, 1900583, 1, 0, 1900584, 1, 0, 1900585, 1, 0, 1900586, 1, 0, 1900587, 1, 0, 1900588, 1, 0, 1900589, 1, 0, 1900590, 1, 0, 1900591, 1, 0, 1900592, 1, 0, 1900593, 1, 0, 1900594, 1, 0, 1900595, 1, 0, 1900596, 1, 0, 1900597, 1, 0, 1900598, 1, 0, 1900599, 1, 0, 1900600, 1, 0, 1900601, 1, 0, 1900602, 1, 0, 1900603, 1, 0 )

[node name="death_time" type="Timer" parent="."]
wait_time = 0.01

[node name="time_bar" parent="." instance=ExtResource( 3 )]
margin_right = 1920.0
margin_bottom = 13.0

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 989.91, 476.852 )

[node name="BallL" parent="." instance=ExtResource( 5 )]
position = Vector2( 448, 224 )
[connection signal="timeout" from="death_time" to="." method="_on_death_time_timeout"]
